2020-04-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile (COMPILE): ... and remove defines.

2020-04-14  Anuj Verma  <anujv@iitbhilai.ac.in>

	Fix compilation under Windows.

	* Makefile (FT_INCLUDES): Add configuration directory.  Without
	that, the file `ftoption.h' that is added to the $(COMPILE) variable
	gets found only if it is located in $(DEVEL_DIR), this is, if we do
	a `make devel' build.

	* graph/win32/rules.mk: s/win32/windows/ to synchronize test for
	Windows platform with FreeType's build system.

2020-03-08  Thomas E. Dickey  <dickey@invisible-island.net>

	[ftdump] Show max-advance width/height and underline info.

	Also reformat output to account for these wider labels.

	* src/ftdump.c (Name_Field): New function.
	(Print_Number_Type): New macro.
	(Print_Name, Print_Type, main): Updated.

2019-12-23  Werner Lemberg  <wl@gnu.org>

	* src/ftcommon.c (FTDemo_Display_Print): Fix compiler warning.

2019-12-23  Noel Benzinger  <noelbenzinger@gmail.com>

	* src/Jamfile (Library): Add `mlgetopt.c' as a dependency (#57466).

2019-09-27  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Standalone stroker test.

	* src/string.c (dinkus_init): Stroke an open path.
	(main, Render_String): Use it.

2019-09-27  Werner Lemberg  <wl@gnu.org>

	* src/ftdump.c (Print_Programs): Check glyf offset and length.

	Problem reported by Marc Schönefeld <marc.schoenefeld@gmx.org>.

2019-09-23  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftbench.c (test_stroke): Implement stroker test.
	(FT_BENCH_STROKE, bench_desc, main): Register it.

2019-09-20  Werner Lemberg  <wl@gnu.org>

	* graph/x11/grx11.c (gr_x11_surface_init): Initialize `xswa'.

	This removes two valgrind warnings about

	  Conditional jump or move depends on uninitialised value(s)

2019-08-27  Werner Lemberg  <wl@gnu.org>

	* Makefile (PLATFORM==unixdev): Add `libbrotlidec'.

	This is needed for the new WOFF2 support.

2019-07-01  Werner Lemberg  <wl@gnu.org>
