@@ -1,3 +1,7 @@
+2020-04-16  Werner Lemberg  <wl@gnu.org>
+
+	* Makefile (CC) [unix]: Synchronize with recent change in FreeType.
+
 2020-04-15  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* Makefile (COMPILE): ... and remove defines.
